--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.11",
     "nodemon": "^1.17.2"
+  },
+  "devDependencies": {
+    "cors": "^2.8.4"
   }
 }
